--- a/docs/components/alert.html
+++ b/docs/components/alert.html
@@ -77,16 +77,7 @@
         <ui-alert>
           <ui-icon name="info"></ui-icon>
           <h3>Update Complete</h3>
-          <div>Your settings have been successfully saved.
-  <ul>
-    <li>Your settings have</li>
-    <li>Your settings have</li>
-  </ul>
-  <ul>
-    <li>Your settings have</li>
-    <li>Your settings have</li>
-  </ul>
-          </div>
+          <div>Your settings have been successfully saved.</div>
         </ui-alert>
       </div>
       <div class="toolbar">
