--- a/ui/components/button/button.css
+++ b/ui/components/button/button.css
@@ -1,8 +1,9 @@
 ui-button{
-  --ui-button-border-radius:var(--ui-border-radius-rounded);
-  --ui-button-size:var(--ui-size-medium);
+  --ui-button-border-radius:var(--ui-border-radius-default);
+  --ui-button-height:var(--ui-control-height-default);
+
   --ui-button-width:fit-content;
-  --ui-button-line-height:var(--ui-line-height-x-small);
+
   --ui-button-font-size:var(--ui-font-size-default);
   --ui-button-padding-inline:16px;
   --ui-button-column-gap:12px;
@@ -25,9 +26,9 @@ ui-button{
   align-items:center;
   justify-content:center;
   vertical-align:middle;
-  height:var(--ui-button-size);
+  height:var(--ui-button-height);
   width:var(--ui-button-width);
-  line-height:var(--ui-button-line-height);
+  line-height:var(--ui-line-height-none);
   border-radius:var(--ui-button-border-radius);
   padding-inline:var(--ui-button-padding-inline);
   column-gap:var(--ui-button-column-gap);
