--- a/ui/styles/core.css
+++ b/ui/styles/core.css
@@ -10,7 +10,6 @@
 @import '../components/focus/focus.css';
 @import '../components/icon/icon.css';
 @import '../components/input/input.css';
-@import '../components/label/label.css';
 @import '../components/portal/portal.css';
 @import '../components/select/select.css';
 @import '../components/spinner/spinner.css';
@@ -28,29 +27,26 @@
 
   /* line height */
   --ui-line-height-none:1;
-  --ui-line-height-x-small:1;
-  --ui-line-height-small:1.2;
+  --ui-line-height-x-small:1.2;
+  --ui-line-height-small:1.3;
   --ui-line-height-normal:1.5;
   --ui-line-height-large:1.7;
   --ui-line-height-x-large:2;
 
-  /* text-align */
-  --ui-text-align-center:center;
-  --ui-text-align-start:start;
-  --ui-text-align-end:end;
-
-  /* ui size */
-  --ui-size-x-small:16px;
-  --ui-size-small:24px;
-  --ui-size-medium:32px;
-  --ui-size-large:40px;
-  --ui-size-x-large:48px;
+  /* control heights */
+  --ui-control-height-x-small:16px;
+  --ui-control-height-small:24px;
+  --ui-control-height-medium:32px;
+  --ui-control-height-large:40px;
+  --ui-control-height-x-large:48px;
+  --ui-control-height-default:var(--ui-control-height-medium);
 
   /* border radius */
   --ui-border-radius-rounded:8px;
   --ui-border-radius-square:0px;
   --ui-border-radius-pill:9999px;
   --ui-border-radius-circle:50%;
+  --ui-border-radius-default:var(--ui-border-radius-rounded);
 
   /* duration */
   --ui-duration-x-fast:0.075s;
@@ -123,4 +119,3 @@ ui-tab,
 button{
   transition-duration:var(--ui-duration);
 }
-/* accent warning danger success */
