--- a/docs/components/accordion.html
+++ b/docs/components/accordion.html
@@ -4,6 +4,14 @@
 </div>
 
 <div>
+  <h2>Dependencies</h2>
+  <p>This component depends on the following components:</p>
+  <ul>
+    <li><a href="#icon">icon</a></li>
+  </ul>
+</div>
+
+<div>
   <h2>Info</h2>
   <p>The structure must be strictly followed.</p>
   <p>The accordion allows multiple items to be opened.</p>
