--- a/docs/components/alert.html
+++ b/docs/components/alert.html
@@ -4,15 +4,19 @@
 </div>
 
 <div>
+  <h2>Dependencies</h2>
+  <p>This component depends on the following components:</p>
+  <ul>
+    <li><a href="#icon">icon</a></li>
+    <li><a href="#button">button</a></li>
+  </ul>
+</div>
+
+<div>
   <h2>Info</h2>
   <p>The structure must be strictly followed.</p>
   <p>A heading or text is required to display a meaningful message.</p>
   <p>The heading can be any HTML heading element from h2 to h6; h3 is recommended.</p>
-</div>
-
-<div>
-  <h2>Dependencies</h2>
-  <p>This component depends on the <a href="#icon">icon</a> component, which is a required part of its functionality.</p>
 </div>
 
 <div>
