--- a/docs/components/breadcrumb.html
+++ b/docs/components/breadcrumb.html
@@ -3,10 +3,23 @@
   <p>Breadcrumbs show the current page's location within a navigational hierarchy and allow users to navigate to parent pages.</p>
 </div>
 
+<div>
+  <h2>Dependencies</h2>
+  <p>This component depends on the following components:</p>
+  <ul>
+    <li><a href="#icon">icon</a></li>
+  </ul>
+</div>
+
+<div>
+  <h2>Attributes</h2>
+  <p>aria-label - static (required). Must be set manually.</p>
+</div>
+
 <section class="content">
 
   <div class="content-item">
-    <div>Text only</div>
+    <div>Default</div>
     <div class="example">
       <div class="preview">
         <ui-breadcrumb>
@@ -25,12 +38,12 @@
 
 <pre><code>
 &lt;ui-breadcrumb&gt;
- &lt;ol&gt;
-  &lt;li&gt;&lt;a href="#"&gt;Home&lt;/a&gt;&lt;/li&gt;
-  &lt;li&gt;&lt;a href="#"&gt;Settings&lt;/a&gt;&lt;/li&gt;
-  &lt;li&gt;&lt;a href="#"&gt;Notifications&lt;/a&gt;&lt;/li&gt;
-  &lt;li&gt;Article&lt;/li&gt;
- &lt;/ol&gt;
+  &lt;ol&gt;
+    &lt;li&gt;&lt;a href="#"&gt;Home&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href="#"&gt;Settings&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href="#"&gt;Notifications&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;Article&lt;/li&gt;
+  &lt;/ol&gt;
 &lt;/ui-breadcrumb&gt;
 </code></pre>
 
