--- a/docs/components/button.html
+++ b/docs/components/button.html
@@ -4,8 +4,15 @@
 </div>
 
 <div>
+  <h2>Dependencies</h2>
+  <p>This component depends on the following components:</p>
+  <ul>
+    <li><a href="#icon">icon</a></li>
+  </ul>
+</div>
+
+<div>
   <h2>Info</h2>
-  <p>This component is designed to work with the <a href="#icon">icon</a> component for rendering icons, but can also be easily adapted to use a standard SVG.</p>
   <p>The component can contain text, icons, or both - in any order.</p>
   <p>This component dispatches a custom event "button-action" whenever it is activated via click or keyboard (Enter / Space). External scripts should listen to this event to handle button actions.</p>
   <p><code>
@@ -20,7 +27,8 @@
   <p>aria-label - static (required). Must be set manually for icon buttons.</p>
   <p>disabled - reactive (optional). Controls the disabled state of the component.</p>
   <p>busy - reactive (optional). Controls the busy state of the component.</p>
-  <p>shape - static (optional). Default: rounded. Available options: rounded, pill, square, circle. Sets the corner style.</p>
+  <p>shape - static (optional). Available options: pill, circle, square.</p>
+  <p>size - static (optional). Available options: x-small, small, medium, large, x-large. Default: medium</p>
 </div>
 
 <section class="content">
@@ -30,7 +38,29 @@
     <div class="example">
       <div class="preview">
         <ui-button>Button</ui-button>
-        <ui-button icon-only aria-label="Button">
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+
+<pre><code>
+&lt;ui-button&gt;Button&lt;/ui-button&gt;
+</code></pre>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Shapes: pill, circle, square</div>
+    <div class="example">
+      <div class="preview">
+        <ui-button shape="pill">Button</ui-button>
+        <ui-button shape="circle" aria-label="Button">
+          <ui-icon name="settings"></ui-icon>
+        </ui-button>
+        <ui-button shape="square" aria-label="Button">
           <ui-icon name="settings"></ui-icon>
         </ui-button>
       </div>
@@ -40,9 +70,13 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-button&gt;Button&lt;/ui-button&gt;
+&lt;ui-button shape="pill"&gt;Button&lt;/ui-button&gt;
 
-&lt;ui-button icon-only aria-label="Button"&gt;
+&lt;ui-button shape="circle" aria-label="Button"&gt;
+  &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+&lt;/ui-button&gt;
+
+&lt;ui-button shape="square" aria-label="Button"&gt;
   &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
 &lt;/ui-button&gt;
 </code></pre>
@@ -52,12 +86,14 @@
   </div>
 
   <div class="content-item">
-    <div>Text-Only, Different Shapes</div>
+    <div>Sizes: x-small, small, medium, large, x-large. Default: medium</div>
     <div class="example">
       <div class="preview">
-        <ui-button shape="rounded">Button</ui-button>
-        <ui-button shape="pill">Button</ui-button>
-        <ui-button shape="square">Button</ui-button>
+        <ui-button size="x-small">Button</ui-button>
+        <ui-button size="small">Button</ui-button>
+        <ui-button size="medium">Button</ui-button>
+        <ui-button size="large">Button</ui-button>
+        <ui-button size="x-large">Button</ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -65,11 +101,11 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-button shape="rounded"&gt;Button&lt;/ui-button&gt;
-
-&lt;ui-button shape="pill"&gt;Button&lt;/ui-button&gt;
-
-&lt;ui-button shape="square"&gt;Button&lt;/ui-button&gt;
+&lt;ui-button size="x-small"&gt;Button&lt;/ui-button&gt;
+&lt;ui-button size="small"&gt;Button&lt;/ui-button&gt;
+&lt;ui-button size="medium"&gt;Button&lt;/ui-button&gt;
+&lt;ui-button size="large"&gt;Button&lt;/ui-button&gt;
+&lt;ui-button size="x-large"&gt;Button&lt;/ui-button&gt;
 </code></pre>
 
       </div>
@@ -77,53 +113,13 @@
   </div>
 
   <div class="content-item">
-    <div>Icon-Only, Different Shapes</div>
-    <div class="example">
-      <div class="preview">
-        <ui-button aria-label="Button" shape="rounded" icon-only>
-          <ui-icon name="article"></ui-icon>
-        </ui-button>
-        <ui-button aria-label="Button" shape="circle" icon-only>
-          <ui-icon name="article"></ui-icon>
-        </ui-button>
-        <ui-button aria-label="Button" shape="square" icon-only>
-          <ui-icon name="article"></ui-icon>
-        </ui-button>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-
-<pre><code>
-&lt;ui-button shape="rounded" icon-only aria-label="Button"&gt;
-&nbsp;&lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
-&lt;/ui-button&gt;
-
-&lt;ui-button shape="circle" icon-only aria-label="Button"&gt;
-&nbsp;&lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
-&lt;/ui-button&gt;
-
-&lt;ui-button shape="square" icon-only aria-label="Button"&gt;
-&nbsp;&lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
-&lt;/ui-button&gt;
-</code></pre>
-
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Text with an icon</div>
+    <div>Text with icons</div>
     <div class="example">
       <div class="preview">
         <ui-button>
           <ui-icon name="home"></ui-icon>
           Button
-        </ui-button>
-        <ui-button>
-          Button
-          <ui-icon name="article"></ui-icon>
+          <ui-icon name="settings"></ui-icon>
         </ui-button>
       </div>
       <div class="toolbar">
@@ -133,13 +129,9 @@
 
 <pre><code>
 &lt;ui-button&gt;
- &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
- Button
-&lt;/ui-button&gt;
-
-&lt;ui-button&gt;
- Button
- &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+  &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+  Button
+  &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
 &lt;/ui-button&gt;
 </code></pre>
 
