--- a/docs/components/checkbox.html
+++ b/docs/components/checkbox.html
@@ -5,7 +5,10 @@
 
 <div>
   <h2>Dependencies</h2>
-  <p>This component depends on the <a href="#icon">icon</a> component, which is required as part of its functionality.</p>
+  <p>This component depends on the following components:</p>
+  <ul>
+    <li><a href="#icon">icon</a></li>
+  </ul>
 </div>
 
 <div>
