--- a/docs/components/select.html
+++ b/docs/components/select.html
@@ -4,6 +4,15 @@
 </div>
 
 <div>
+  <h2>Dependencies</h2>
+  <p>This component depends on the following components:</p>
+  <ul>
+    <li><a href="#icon">icon</a></li>
+    <li><a href="#button">button</a></li>
+  </ul>
+</div>
+
+<div>
   <h2>Attributes</h2>
   <p>aria-label - static (required). If used outside of the <a href="#field">field</a> component, the aria-label must be set manually.</p>
   <p>placeholder - static (optional). Default: "-". Static text to display when no item is selected.</p>
