--- a/docs/components/switch.html
+++ b/docs/components/switch.html
@@ -5,7 +5,7 @@
 
 <div>
   <h2>Attributes</h2>
-  <p>aria-label - static (required). The aria-label must be set manually.</p>
+  <p>aria-label - static (required). Must be set manually.</p>
   <p>checked - reactive (required). Default: false. Controls the checked state of the component.</p>
   <p>disabled - reactive (optional). Controls the disabled state of the component.</p>
   <p>required - static (optional). Indicates whether the component is required.</p>
