--- a/docs/components/spinner.html
+++ b/docs/components/spinner.html
@@ -4,13 +4,16 @@
 </div>
 
 <div>
-  <h2>Info</h2>
-  <p>The spinner is already animated.</p>
+  <h2>Dependencies</h2>
+  <p>This component depends on the following components:</p>
+  <ul>
+    <li><a href="#icon">icon</a></li>
+  </ul>
 </div>
 
 <div>
-  <h2>Dependencies</h2>
-  <p>This component depends on the <a href="#icon">icon</a> component, which is required as part of its functionality.</p>
+  <h2>Info</h2>
+  <p>The spinner is already animated.</p>
 </div>
 
 <section class="content">
