--- a/ui/components/switch/switch.css
+++ b/ui/components/switch/switch.css
@@ -1,13 +1,14 @@
 ui-switch{
   --ui-switch-track-background-color:var(--ui-surface-color-default);
 
-  --ui-switch-track-border-radius:var(--ui-border-radius-pill);
+  --ui-switch-border-radius:var(--ui-border-radius-full);
+
   --ui-switch-track-height:24px;
   --ui-switch-track-width:40px;
 
   --ui-switch-track-checked-background-color:var(--color-blue-500);
 
-  --ui-switch-thumb-border-radius:var(--ui-border-radius-circle);
+
   --ui-switch-thumb-height:16px;
   --ui-switch-thumb-width:16px;
   --ui-switch-thumb-position-start:4px;
@@ -21,7 +22,7 @@ ui-switch{
   height:var(--ui-switch-track-height);
   width:var(--ui-switch-track-width);
   padding-inline-start:var(--ui-switch-thumb-position-start);
-  border-radius:var(--ui-switch-track-border-radius);
+  border-radius:var(--ui-switch-border-radius);
   background-color:var(--ui-switch-track-background-color);
   transition-property:background-color,outline-color,padding-inline-start;
 
@@ -29,7 +30,7 @@ ui-switch{
     content:'';
     height:var(--ui-switch-thumb-height);
     width:var(--ui-switch-thumb-width);
-    border-radius:var(--ui-switch-thumb-border-radius);
+    border-radius:inherit;
     background-color:var(--ui-switch-thumb-background-color);
   }
 
