--- a/docs/components/button.html
+++ b/docs/components/button.html
@@ -28,7 +28,7 @@
   <p>disabled - reactive (optional). Controls the disabled state of the component.</p>
   <p>busy - reactive (optional). Controls the busy state of the component.</p>
   <p>shape - static (optional). Available options: pill, circle, square.</p>
-  <p>size - static (optional). Available options: x-small, small, medium, large, x-large. Default: medium</p>
+  <p>size - static (optional). Available options: small, medium, large. Default: small</p>
 </div>
 
 <section class="content">
@@ -86,14 +86,12 @@
   </div>
 
   <div class="content-item">
-    <div>Sizes: x-small, small, medium, large, x-large. Default: medium</div>
+    <div>Sizes: small, medium, large. Default: small</div>
     <div class="example">
       <div class="preview">
-        <ui-button size="x-small">Button</ui-button>
         <ui-button size="small">Button</ui-button>
         <ui-button size="medium">Button</ui-button>
         <ui-button size="large">Button</ui-button>
-        <ui-button size="x-large">Button</ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -101,11 +99,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-button size="x-small"&gt;Button&lt;/ui-button&gt;
 &lt;ui-button size="small"&gt;Button&lt;/ui-button&gt;
 &lt;ui-button size="medium"&gt;Button&lt;/ui-button&gt;
 &lt;ui-button size="large"&gt;Button&lt;/ui-button&gt;
-&lt;ui-button size="x-large"&gt;Button&lt;/ui-button&gt;
 </code></pre>
 
       </div>
