--- a/ui/components/button/button.css
+++ b/ui/components/button/button.css
@@ -19,9 +19,9 @@ ui-button{
   align-items:center;
   justify-content:center;
   vertical-align:middle;
+  line-height:1;
   height:var(--ui-button-height);
   width:var(--ui-button-width);
-  line-height:var(--ui-line-height-none);
   border-radius:var(--ui-button-border-radius);
   padding-inline:var(--ui-button-padding-inline);
   column-gap:var(--ui-button-column-gap);
@@ -89,11 +89,6 @@ ui-button{
   }
 
   /* size */
-  &[size="x-small"]{
-    --ui-button-height:var(--ui-control-height-x-small);
-    --ui-button-font-size:var(--ui-font-size-x-small);
-  }
-
   &[size="small"]{
     --ui-button-height:var(--ui-control-height-small);
     --ui-button-font-size:var(--ui-font-size-small);
@@ -107,10 +102,5 @@ ui-button{
   &[size="large"]{
     --ui-button-height:var(--ui-control-height-large);
     --ui-button-font-size:var(--ui-font-size-large);
-  }
-
-  &[size="x-large"]{
-    --ui-button-height:var(--ui-control-height-x-large);
-    --ui-button-font-size:var(--ui-font-size-x-large);
   }
 }
